<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="end" >

        <RadioButton
            android:id="@+id/datapointActionLayoutRadioButtonGetStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_status" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <RadioButton
            android:id="@+id/radioButtonDefaultAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:text="@string/default_action" />

        <Spinner
            android:id="@+id/spinnerActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="end"
        android:focusable="true"  
		android:focusableInTouchMode="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButtonCustomAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/custom_action" />

            <Button
                android:id="@+id/buttonDatapointActionLayoutHelper"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_helper" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp" >

            <TextView
                android:id="@+id/textViewActionItemActionName"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/action_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextActionName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_for_action_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp" >

            <TextView
                android:id="@+id/textViewActionParameter"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/action_parameter"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextActionValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_for_action_value" >

            </EditText>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/textViewDatapointActionLayoutHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/default_blue"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
