<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <NumberPicker
            android:id="@+id/customTimePickerLayouNumberPickerTimeIntervalHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/timingTaskLayoutExecuteWayDetail"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/unit_hour" />

        <NumberPicker
            android:id="@+id/customTimePickerLayouNumberPickerTimeIntervalMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/timingTaskLayoutTaskObjectTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/unit_minute" />

        <NumberPicker
            android:id="@+id/customTimePickerLayouNumberPickerTimeIntervalSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/second" />

    </LinearLayout>

</RelativeLayout>